--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+blib/
+.build/
+_build/
+cover_db/
+inc/
+Build
+!Build/
+Build.bat
+.last_cover_stats
+.DS_Store
+Makefile
+Makefile.old
+MANIFEST.bak
+META.yml
+MYMETA.yml
+nytprof.out
+nytprof/
+pm_to_blib
+
+*~
+*.bak
+._*
+
+
 /Bag-Similarity-*
 /.build
 /_build*
